# aport-agent-guardrails

./: .editorconfig  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .npmignore  .shellcheckrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  PUBLISHING.md  README.md  RELEASE.md  SECURITY.md  TEST_SUMMARY.md  aporthq-agent-guardrails-1.0.7.tgz  lerna.json  package-lock.json  package.json  pyproject.toml  security.txt
.changeset/: README.md  config.json
.cursor/rules/: no-cursor-pr-footer.mdc  release-process.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  policy_pack.md
.github/workflows/: ci.yml  e2e-crewai.yml  e2e-langchain.yml  e2e-openclaw.yml  release.yml  secrets-scan.yml  shellcheck.yml
docs/: ADDING_A_FRAMEWORK.md  AGENTS.md.example  APORT-OPENCLAW-INTEGRATION.md  APORT_AGENT_GUARDRAILS_NAMING.md  APORT_IMPLEMENTATION_SUMMARY.md  APORT_OPENCLAW_ANALYSIS_AND_ROADMAP.md  APORT_OPENCLAW_INTEGRATION_PROPOSAL.md  APORT_OPENCLAW_REPO_STRATEGY.md  CODE_REVIEW.md  DEPLOYMENT_READINESS.md  FAQ_SECURITY_SCANNERS.md  FRAMEWORK_ROADMAP.md  HOSTED_PASSPORT_SETUP.md  IMPLEMENTING_YOUR_OWN_EVALUATOR.md  IMPROVEMENTS_NEEDED.md  OAP_COMPLIANCE_STRATEGY.md  OAP_V1_IMPLEMENTATION_COMPLETE.md  OPENCLAW_COMPATIBILITY.md  OPENCLAW_LOCAL_INTEGRATION.md  OPENCLAW_TOOLS_AND_POLICIES.md  QUICKSTART.md  QUICKSTART_OPENCLAW_PLUGIN.md  README.md  RELEASE.md  REPO_LAYOUT.md  SECURITY_MODEL.md  SKILLS_ECOSYSTEM_ANALYSIS_FEB17.md  TOOL_POLICY_MAPPING.md  UPGRADE.md  VERIFICATION_METHODS.md
docs/assets/: README.md
docs/development/: ERROR_CODES.md
docs/frameworks/: GITHUB_ISSUE_PROPOSALS.md  crewai.md  cursor.md  langchain.md  n8n.md  openclaw.md
docs/launch/: ADD_APORT_AWESOME_LISTS_INSTRUCTIONS.md  ANNOUNCEMENT_GUIDE.md  AWESOME_REPOS.md  CURSOR_VSCODE_HOOKS_RESEARCH.md  DEMO_TERMINAL_OUTPUT.txt  DRY_AND_PLAN_CHECKLIST.md  EVIDENCE_README.md  EVIDENCE_TERMINAL_CAPTURE.txt  FRAMEWORK_SUPPORT_PLAN.md  LAUNCH_READINESS_CHECKLIST.md  LAUNCH_STRATEGY_SUMMARY.md  OPENCLAW_FEEDBACK_AND_FIXES.md  POST_1_VALENTINE_IMPROVED.md  POST_2_GUARDRAIL_IMPROVED.md  PRE_LAUNCH_FIXES.md  QUICK_LAUNCH_CHECKLIST.md  READINESS_SUMMARY.md  README.md  USER_STORIES.md
docs/operations/: MONITORING.md
docs/reviews/: 2026-02-18-staff-review.md
examples/crewai/: run_with_guardrail.py  sample_crew.py
examples/langchain/: README.md  run_with_guardrail.py
extensions/openclaw-aport/: .npmignore  CHANGELOG.md  MIGRATION.md  README.md  index.js  index.ts  openclaw-aport.js  openclaw.plugin.json  package-lock.json  package.json  test.js  tsconfig.json
integrations/: README.md
integrations/crewai/: README.md  decorator.py
integrations/langchain/: README.md  middleware.py  middleware.ts
integrations/n8n/: README.md
local-overrides/: README.md
python/aport_guardrails/: __init__.py  cli.py  pyproject.toml  setup.py
python/aport_guardrails/core/: __init__.py  cli_common.py  config.py  constants.py  context.py  default-passport-paths.json  default_passport_paths.py  errors.py  evaluator.py  exceptions.py  passport.py  tool-pack-mapping.json  tool_pack_mapping.py  validation.py
python/aport_guardrails/frameworks/: __init__.py  base.py  crewai.py  langchain.py
python/aport_guardrails/tests/: __init__.py  test_context.py  test_evaluator.py  test_frameworks_langchain.py
python/crewai_adapter/: README.md  __init__.py  decorator.py  hook.py  pyproject.toml
python/crewai_adapter/aport_guardrails_crewai/: __init__.py  cli.py  decorator.py
python/crewai_adapter/tests/: __init__.py  test_decorator.py  test_hook.py
python/langchain_adapter/: README.md  __init__.py  cli.py  middleware.py  pyproject.toml  setup.py
python/langchain_adapter/aport_guardrails_langchain/: __init__.py  cli.py
python/langchain_adapter/tests/: __init__.py  test_callback.py  test_evaluator_integration.py
scripts/: README.md  ensure-submodules-updated.sh  sync-version.mjs
src/: evaluator.js
src/server/: index.js
tests/: README.md  run.sh  setup.sh  test-api-evaluator.sh  test-file-capabilities.sh.skip  test-four-verification-methods.sh  test-full-flow.sh  test-kill-switch.sh  test-npm-package.sh  test-oap-v1-guardrail.sh  test-oap-v1-passport-and-status.sh  test-openclaw-hosted-flow.sh  test-passport-creation.sh  test-passport-missing-and-invalid.sh  test-plugin-guardrail-cli.sh  test-remote-passport-api.sh  test-web-capabilities.sh.skip
(+43 files in other folders)
